# datapoint-mcp

./: .mcp.json  LICENSE  README.md  client.py  config.py  llms.txt  pyproject.toml  sanitize.py  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
mcp_server/: __main__.py  auth.py  client.py  config.py  sanitize.py  server.py
tests/: test_client.py  test_error_mapping.py  test_plan_formatters.py  test_renderers.py  test_sanitize.py
