[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datapoint-mcp"
version = "0.1.2"
description = "MCP server for creating human evaluation surveys via Datapoint AI"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
datapoint-mcp = "mcp_server.server:main"

# Hatchling can't auto-detect the package because the project name
# (datapoint-mcp → datapoint_mcp) doesn't match the source dir (mcp_server).
[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
